[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scanpy-2531"
version = "0.1.0"
dependencies = [
	'anndata==0.9.1',
	'scanpy==1.9.3',
	'Pillow==9.5.0',
	'appnope==0.1.3',
	'attrs==23.1.0',
	'babel==2.12.1',
	'backcall==0.2.0',
	'certifi==2023.05.07',
	'cffi==1.15.1',
	'charset_normalizer==3.1.0',
	'cloudpickle==2.2.1',
	'colorama==0.4.6',
	'comm==0.1.3',
	'cycler==0.10.0',
	'cytoolz==0.12.0',
	'dask==2023.6.0',
	'python-dateutil==2.8.2',
	'debugpy==1.6.7',
	'decorator==5.1.1',
	'defusedxml==0.7.1',
	'executing==1.2.0',
	'h5py==3.9.0',
	'idna==3.4',
	'igraph==0.10.4',
	'ipykernel==6.23.3',
	'ipython_genutils==0.2.0',
	'ipywidgets==8.0.6',
	'jedi==0.18.2',
	'jinja2==3.1.2',
	'joblib==1.2.0',
	'jsonschema==4.17.3',
	'jupyter_events==0.6.3',
	'jupyter_server==2.6.0',
	'jupyterlab_server==2.23.0',
	'kiwisolver==1.4.4',
	'leidenalg==0.9.1',
	'llvmlite==0.40.0',
	'louvain==0.8.0',
	'markupsafe==2.1.3',
	'matplotlib==3.7.1',
	'natsort==8.4.0',
	'nbformat==5.9.0',
	'numba==0.57.0',
	'numexpr==2.8.4',
	'numpy==1.24.3',
	'packaging==23.1',
	'pandas==2.0.2',
	'parso==0.8.3',
	'patsy==0.5.3',
	'pexpect==4.8.0',
	'pickleshare==0.7.5',
	'platformdirs==3.8.0',
	'prompt_toolkit==3.0.38',
	'psutil==5.9.5',
	'ptyprocess==0.7.0',
	'pure_eval==0.2.2',
	'pygments==2.15.1',
	'pyparsing==3.1.0',
	'pytz==2023.3',
	'requests==2.31.0',
	'rfc3339_validator==0.1.4',
	'rfc3986_validator==0.1.1',
	'scipy==1.11.0',
	'seaborn==0.12.2',
	'session_info==1.0.0',
	'setuptools==68.0.0',
	'six==1.16.0',
	'scikit-learn==1.2.2',
	'sniffio==1.3.0',
	'PySocks==1.7.1',
	'stack_data==0.6.2',
	'statsmodels==0.14.0',
	'texttable==1.6.7',
	'threadpoolctl==3.1.0',
	'toolz==0.12.0',
	# 'PyTorch==1.12.1',
	'tornado==6.3.2',
	'tqdm==4.65.0',
	'traitlets==5.9.0',
	'urllib3==2.0.3',
	'wcwidth==0.2.6',
	'websocket-client==1.6.1',
	'PyYAML==6.0',
	'PyZMQ==25.1.0',
]

[tool.hatch.envs.default.scripts]
test = "python -m scanpy_2531"
